Fix dashboard overflow

--- a/app/assets/stylesheets/basin_metrics/dashboard.scss
+++ b/app/assets/stylesheets/basin_metrics/dashboard.scss
@@ -19,7 +19,8 @@ $option_height: 40px;
 .dashboard {
   height: 100%;
   background-color: $basin_black;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 
   a{
     color: #298889;
