--- a/app/assets/stylesheets/basin_metrics/record_pane.scss
+++ b/app/assets/stylesheets/basin_metrics/record_pane.scss
@@ -4,7 +4,8 @@
   top: 0;
   right: -25%;
   width: 25%;
-  height: 100%;
+  min-height: 100%;
+  height: auto;
   background-color: $basin_ltblack;
   box-shadow: 0 0 3px 0 #000;
   z-index: 1;
